objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Client_Info__c</fullName>
        <externalId>true</externalId>
        <label>Client Info</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>test3__c</fullName>
        <label>test3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <recordTypes>
        <fullName>test2</fullName>
        <active>true</active>
        <label>test2</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>